[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sBullet_strip2.png" type="Texture" id=1]
[ext_resource path="res://objects/bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 4.75 )

[node name="bullet" type="Area2D" groups=[
"player_bullet",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 3.5, 0.125 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 0.556812 )
scale = Vector2( 1, 0.354099 )
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
