[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sEbullet_strip2.png" type="Texture" id=1]
[ext_resource path="res://objects/bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 6.61739 )

[node name="enemy_bullet" type="Area2D"]
script = ExtResource( 2 )
speed = 500

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_enemy_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
